--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -22,6 +22,7 @@
     font-weight: var(--font-semi-bold);
     margin-left: 10px;
     margin-right: 10px;
+    transition-duration: 0.4s;
 }
 .nav__link:hover {
     color: var(--first-color);
