--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -14,6 +14,8 @@
 
     // hsl color mode:
     --first-color: hsl(var(--hue-color), 69%, 61%);
+    --first-color-alt: hsl(var(--hue-color), 57%, 53%);
+    --first-color-light: hsl(var(--hue-color), 92%, 85%);
     --title-color: hsl(var(--hue-color), 8%, 95%);
     --text-color: hsl(var(--hue-color), 8%, 75%);
     --input-color: hsl(var(--hue-color), 29%, 16%);
@@ -34,6 +36,7 @@
     /*=============== FONT WEIGHT ===============*/
     --font-medium: 500;
     --font-semi-bold: 600;
+    --font-bold: 700;
 
     /*=============== Z INDEX ===============*/
     --z-tooltip: 10;
@@ -82,6 +85,27 @@ img {
     height: auto;
 }
 
+button {
+    display: block;
+    font-family: 'Montserrat', sans-serif;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: var(--first-color);
+    color: var(--title-color);
+    padding: 12px 8px;
+    border-radius: 5px;
+
+    span {
+        margin-right: 7px;
+    }
+}
+button:hover {
+    background-color: var(--first-color-alt);
+}
+
 /*=============== REUSABLE CSS ===============*/
 .section {
     margin-bottom: 48px;
@@ -92,12 +116,13 @@ img {
 }
 
 .section__title {
-    font-size: var(--h1-font-size);
+    font-size: var(--big-font-size);
+    color: var(--title-color);
 }
 
 .section__subtitle {
     display: block;
-    font-size: var(--small-font-size);
+    font-size: var(--normal-font-size);
     margin-bottom: 3rem;
 }
 
