--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,7 @@
 .wrapper {
+    position: fixed;
+    background-color: var(--body-color);
+    z-index: 1000;
     width: 100%;
     height: var(--header-height);
     align-items: center;
