--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -20,6 +20,7 @@
     --text-color: hsl(var(--hue-color), 8%, 75%);
     --input-color: hsl(var(--hue-color), 29%, 16%);
     --body-color: hsl(var(--hue-color), 28%, 12%);
+    --body-color-darker: hsl(var(--hue-color), 28%, 6%);
     --container-color: hsl(var(--hue-color), 29%, 16%);
 
     /*=============== FONT AND TYPOGRAPHY ===============*/
