--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -235,6 +235,10 @@
 
 /*=============== 5.CONTACTME ===============*/
 .contact__item {
+    padding: 15px;
+    border-radius: 5px;
+    background-color: var(--body-color-darker);
+    min-width: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
