--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -5,3 +5,21 @@
     border-width: 1;
     border-color: red;
 }
+.scrollToTopBtn {
+    position: fixed;
+    bottom: 50px;
+    right: 5%;
+    width: 45px;
+    height: 45px;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    background-color: var(--first-color);
+    color: var(--title-color);
+    border-radius: 5px;
+    transition-duration: 0.4s;
+}
+.scrollToTopBtnIcon {
+    margin: auto;
+}
