--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,7 +12,6 @@
 
 .active {
     background-color: var(--body-color-darker);
-
 }
 .inner {
     width: 80%;
@@ -20,13 +19,15 @@
     align-items: center;
     justify-content: space-between;
 }
-.logo, a:visited {
+.logo,
+a:visited {
     color: var(--title-color);
     font-weight: var(--font-semi-bold);
 }
 .nav {
 }
 .nav__link {
+    position: relative;
     color: var(--title-color);
     font-weight: var(--font-semi-bold);
     margin-left: 10px;
@@ -35,4 +36,30 @@
 }
 .nav__link:hover {
     color: var(--first-color);
+}
+.nav__link:before {
+    content: '';
+    width: 0;
+    height: 1.5px;
+    border-radius: 5px;
+    background-color: var(--first-color);
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transition-duration: 0.3s;
+}
+.nav__link:hover:before {
+    width: 100%;
+    left: 0;
+}
+
+/*============= RESPONSIVE =============*/
+// TABLET + MOBILE: width < 1024px
+@media only screen and (max-width: 63.9375rem) {
+    .inner {
+        justify-content: center;
+    }
+    nav {
+        display: none;
+    }
 }
